scripts/test_outputs/sample26out.txt
./cfiles/sample26.cpp: In function ‘int helper(int)’:
./cfiles/sample26.cpp:141:5: error: declaration of ‘int x’ shadows a parameter
 int x =  0 ;
     ^
./cfiles/sample26.cpp: In function ‘void helper(double)’:
./cfiles/sample26.cpp:146:8: error: declaration of ‘double x’ shadows a parameter
 double x = 0.000000;
        ^
